DuPont DevSB/src/objects/pse__Backlog__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for scheduled backlog</description>
    <fields>
        <fullName>pse__Assignment_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of assignments to process in a single batch</description>
        <inlineHelpText>The number of assignments to process in a single batch</inlineHelpText>
        <label>Assignment Batch Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Fields_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The default value for the Copy Fields for Current Time Period checkbox</inlineHelpText>
        <label>Copy Fields Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Time_Period_Types__c</fullName>
        <defaultValue>&quot;Month;Quarter;Year;Perpetual&quot;</defaultValue>
        <description>A semicolon delimited list of the default time period types to process</description>
        <inlineHelpText>A semicolon delimited list of the default time period types to process</inlineHelpText>
        <label>Default Time Period Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Delete_Details_on_Calc_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Details on Calc Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The default value for the Include Sublevels option</description>
        <inlineHelpText>The default value for the Include Sublevels option</inlineHelpText>
        <label>Include Sublevels Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Statuses__c</fullName>
        <defaultValue>&quot;Open,Planned&quot;</defaultValue>
        <description>A comma-delimited list of valid milestone status values for backlog calculation.</description>
        <inlineHelpText>A comma-delimited list of valid milestone status values for backlog calculation.</inlineHelpText>
        <label>Milestone Statuses</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Perform_Scheduled_Job_Cleanup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If backlog remainder is processed in a scheduled job, this flag controls whether to run another scheduled job to cleanup all jobs that will not execute again. This is necessary to work around a force.com limitation that counts these jobs against the total</description>
        <inlineHelpText>If backlog remainder is processed in a scheduled job, this flag controls whether to run another scheduled job to cleanup all jobs that will not execute again. This is necessary to work around a force.com limitation that counts these jobs against the total</inlineHelpText>
        <label>Perform Scheduled Job Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Post_Process_Project_Batch_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <inlineHelpText>The number of projects to process in a single batch if the backlog remainder is processed in a separate batch.</inlineHelpText>
        <label>Post Process Project Batch Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Post_Processing_Delay__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>The delay in seconds for the post-processing scheduled job.</inlineHelpText>
        <label>Post Processing Delay</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Process_Backlog_Remainder_Inline__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to attempt to process backlog remainder calculations within the batch job or to schedule the remainder to be processed in another job. Do not set this value to false unless you are experiencing gov. limit errors and have contacted Appirio support.</description>
        <inlineHelpText>Whether to attempt to process backlog remainder calculations within the batch job or to schedule the remainder to be processed in another job. Do not set this value to false unless you are experiencing gov. limit errors and have contacted Appirio support.</inlineHelpText>
        <label>Process Backlog Remainder Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Reuse_Detail_Objects_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default value for the Reuse Detail Objects checkbox</inlineHelpText>
        <label>Reuse Detail Objects Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Backlog</label>
</CustomObject>